# learn-python

./: .gitignore
common-frontend/: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
common-frontend/docs/: README.md
common-frontend/docs/ai/: README.md  agent-guide.md  openspec-manager-flow.md
common-frontend/docs/api/: README.md
common-frontend/docs/prd/: README.md
common-frontend/manager/: STATUS.md  plan.yaml
common-frontend/openspec/: config.yaml
common-frontend/repairs/: README.md  list.yaml  repair-template.md
common-frontend/src/: main.tsx
python-lessons/: lesson_a_context_manager.py
todo-project/: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
todo-project/alembic/: env.py
todo-project/alembic/versions/: 0f9388d680ba_add_user_id.py  68f764dde4aa_add_task_timestamps_and_indexes.py  aeb7995332f6_create_tasks_table.py  b9f569c83c73_create_users_table.py
todo-project/app/api/v1/: auth.py  login_async.py  tasks.py
todo-project/app/core/: config.py  deps.py  exception_handlers.py  exceptions.py  logging.py  middlewares.py  redis_client.py  security.py  session.py
todo-project/app/db/: base.py  session.py
todo-project/app/models/: task.py  user.py
todo-project/app/repositories/: task_repository.py  user_repository.py
todo-project/app/schemas/: auth.py  response.py  task.py
todo-project/app/services/: auth_redis_service.py  auth_service.py  cache_service.py  task_service.py
(+63 files in other folders)
